[project]
name = "cintent"
version = "0.1.0"
description = "Summarize the intent of GitHub Actions workflows"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pyinstrument>=5.1.1",
    "ruamel-yaml>=0.18.14",
    "tqdm>=4.67.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
]

[project.scripts]
cintent = "cintent:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
